[package]
name = "cataclysm-jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
serde = "1.0.164"
base64 = "0.21.2"
cataclysm = "0.2.0-beta.11"
jwt-simple = "0.11.5"
reqwest = { version = "0.11.18", features = ["blocking"] }