[package]
name = "cataclysm-jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }

[dependencies]
serde_json = "1.0.96"
serde = "1.0.164"
base64 = "0.21.2"
cataclysm = "0.2.0-beta.11"
rsa = {version = "0.9.2", features = ["sha2"]}
reqwest = "0.11.18"
ring = "0.16.20"