[package]
name = "cataclysm-jwt"
version = "0.1.3"
license = "MIT"
description = "Simple session creator for JWT handling in cataclysm"
repository = "https://github.com/Arthur-phys/cataclysm-jwt"
edition = "2021"
keywords = ["server","cataclysm","jwt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }

[dependencies]
serde_json = "1.0.96"
serde = "1.0.164"
base64 = "0.21.2"
cataclysm = {version = "0.3.0-beta.2", features = ["ws"]}
rsa = {version = "0.9.2", features = ["sha2"]}
reqwest = "0.11.18"
ring = "0.16.20"
chrono = "0.4.26"

[features]
lax-security = []
jwt-use = []
jwt-alg = []
delta-start = []